--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -25,6 +25,7 @@
   text-transform: uppercase;
   margin-bottom: 0.6em;
   letter-spacing: 0.04em;
+  margin-left: 2.8em;
 }
 
 .title-section__2 {
